--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.119",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.4"
