--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start-frontend": "react-scripts start",
-    "start-backend": "node backend.js",
+    "start-backend": "nodemon backend.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
