--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://beefcarhorn.github.io/portfolio",
+  "homepage": "https://beefcarhorn.github.io/portfolio",
   "name": "app",
   "version": "0.1.0",
   "private": true,
